[gd_scene load_steps=6 format=1]

[ext_resource path="res://scripts/player/Animals.gd" type="Script" id=1]
[ext_resource path="res://graphics/player/Player-dummy.png" type="Texture" id=2]
[ext_resource path="res://sounds/Bleetz.wav" type="Sample" id=3]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( 8.53326, 15.5216, -8.90076, 15.5216, -9.09448, -15.666, 8.53326, -15.666 )

[sub_resource type="SampleLibrary" id=2]

samples/Bleetz = {
"db": -3.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 3 )
}

[node name="Animals" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
mAcceleration = 80.0
mDeceleration = 80.0
mShockCooldown = 0.05
mPowerDepletion = 10
mShockCooldownMultiplier = 2.0
mBaseAggressionIncrement = 1.0
mAggressionCooldownMultiplier = 0.5
mAggressionCooldown = 1.0

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

build_mode = 0
polygon = Vector2Array( 8.53326, -15.666, -9.09448, -15.666, -8.90076, 15.5216, 8.53326, 15.5216 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="ShockTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.05
one_shot = true
autostart = false

[node name="Camera2D" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 8.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="AggressionTimer" type="Timer" parent="."]

process_mode = 0
wait_time = 1.0
one_shot = false
autostart = true

[node name="SnowParticles" type="Particles2D" parent="."]

transform/pos = Vector2( 8, 16 )
transform/rot = -90.0
config/amount = 32
config/lifetime = 2.0
config/time_scale = 2.35
config/process_mode = 1
config/local_space = false
params/direction = 334.72
params/spread = 12.52
params/linear_velocity = 18.22
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 5.57
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0

[node name="SnowPartArea" type="Area2D" parent="."]

transform/pos = Vector2( 0, 20 )
transform/scale = Vector2( 0.5, 0.1 )
input/pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="SamplePlayer2D" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 2 )
config/pitch_random = 0.0

[connection signal="timeout" from="ShockTimer" to="." method="_on_ShockTimer_timeout"]

[connection signal="timeout" from="AggressionTimer" to="." method="_on_AggressionTimer_timeout"]


